--- a/package.json
+++ b/package.json
@@ -1,26 +1,27 @@
 {
-  "name": "electron-quick-start",
+  "name": "hitchco mk4 HUD-pc",
   "version": "1.0.0",
-  "description": "A minimal Electron application",
+  "description": "The software driving the display for the hitchco mk4",
   "main": "main.js",
   "scripts": {
     "start": "electron ."
+	"install": "electron-rebuild"
   },
-  "repository": "https://github.com/electron/electron-quick-start",
+  "repository": "https://github.com/hitchco-mk4/HUD-pc/",
   "keywords": [
     "Electron",
-    "quick",
-    "start",
-    "tutorial",
-    "demo"
+	"Raspberry Pi",
+	"Arduino",
+	"Automotive Car"
   ],
-  "author": "GitHub",
-  "license": "CC0-1.0",
+  "author": "Devon Bray - dev@esologic.com",
+  "license": "MIT",
   "devDependencies": {
     "electron": "~1.6.2",
     "electron-rebuild": "^1.5.11"
   },
   "dependencies": {
+	"rpi-gpio",
     "chart.js": "^2.5.0",
     "serialport": "^4.0.7"
   }
