cleaning up files

--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "hitchco mk4 HUD-pc",
-  "version": "1.0.0",
+  "name": "hitchco-mk4-HUD-pc",
+  "version": "0.0.0",
   "description": "The software driving the display for the hitchco mk4",
   "main": "main.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron .",
 	"install": "electron-rebuild"
   },
   "repository": "https://github.com/hitchco-mk4/HUD-pc/",
@@ -21,7 +21,7 @@
     "electron-rebuild": "^1.5.11"
   },
   "dependencies": {
-	"rpi-gpio",
+	"rpi-gpio": "^0.9.1",
     "chart.js": "^2.5.0",
     "serialport": "^4.0.7"
   }
